[package]
name = "lineuz_encounter_counter"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocrs = { git = "https://github.com/robertknight/ocrs.git" }
anyhow = "1.0.80"
rayon = "1.8.0"
rten = { version = "0.13.1" }
rten-imageproc = { version = "0.13.1" }
rten-tensor = { version = "0.13.1" }
rten-imageio = { version = "0.13.1" }
fastrand = "2.1.1"
lexopt = "0.3.0"
regex = "1.10.4"
image = "0.25.1"
repng = "0.2.2"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
xcap = "0.0.13"
egui = "0.30.0"
eframe = "0.30.0"
ctrlc = "3.2"
nix = { version = "0.27", features = ["signal"] }
once_cell = "1.18"